<resources>
    <string name="app_name">MovieInfo</string>
    <string name="title_home">Home</string>
    <string name="title_movie">Movie</string>
    <string name="movie_cover">Movie Cover</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="moviename">MovieName</string>
    <string name="opendate">OpenDate</string>
    <string name="rating">Rating</string>
    <string name="cast">cast</string>
    <string name="favcount">FavCount</string>
    <string name="commentcount">CommentCount</string>
    <string name="genre">genre</string>
    <string name="language">language</string>
    <string name="synopsis">Synopsis</string>
    <string name="director">director</string>
    <string name="date_duration_category">Date || Duration || Category</string>
</resources>