<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal"
    android:paddingStart="5dp"
    android:paddingEnd="5dp"
    android:paddingBottom="10dp">

    <ImageView
        android:id="@+id/movieImageView"
        android:layout_width="151dp"
        android:layout_height="126dp"
        android:layout_weight="1"
        android:contentDescription="@string/movie_cover"
        app:srcCompat="@drawable/ic_baseline_movie_24" />

    <TextView
        android:id="@+id/ratingTextView"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/rating" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="261dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/movieNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:maxLines="2"
            android:text="@string/moviename"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/favCountTextView"
            android:layout_width="75dp"
            android:layout_height="18dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:text="@string/favcount"
            app:layout_constraintStart_toEndOf="@+id/favCountImageView"
            app:layout_constraintTop_toBottomOf="@+id/movieNameTextView" />

        <TextView
            android:id="@+id/commentCountTextView"
            android:layout_width="75dp"
            android:layout_height="18dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:text="@string/commentcount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/commentCountImageView"
            app:layout_constraintTop_toBottomOf="@+id/movieNameTextView" />

        <TextView
            android:id="@+id/openDateTextView"
            android:layout_width="128dp"
            android:layout_height="19dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="24dp"
            android:text="@string/opendate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/favCountImageView"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/favCountImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movieNameTextView"
            app:srcCompat="@drawable/ic_baseline_favorite_border_24"
            android:contentDescription="@string/favcount" />

        <ImageView
            android:id="@+id/commentCountImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/favCountTextView"
            app:layout_constraintTop_toBottomOf="@+id/movieNameTextView"
            app:srcCompat="@drawable/ic_outline_mode_comment_24"
            android:contentDescription="@string/commentcount" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>