<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movieDetailLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingStart="5dp"
    android:paddingEnd="5dp"
    android:paddingBottom="?actionBarSize"
    tools:context=".ui.moviedetail.MovieDetailFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.glide.slider.library.SliderLayout
                android:id="@+id/slider"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>


            <com.glide.slider.library.indicators.PagerIndicator
                android:id="@+id/custom_indicator"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="12dp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/slider" />

            <TextView
                android:id="@+id/ratingDTextView"
                android:layout_width="70dp"
                android:layout_height="72dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="28dp"
                android:gravity="center"
                android:text="@string/rating"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/slider" />

            <TextView
                android:id="@+id/movieDNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="28dp"
                android:layout_weight="1"
                android:text="@string/moviename"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/ratingDTextView"
                app:layout_constraintTop_toBottomOf="@+id/slider" />


            <ImageView
                android:id="@+id/favCountDImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_baseline_favorite_border_24"
                app:layout_constraintStart_toEndOf="@+id/ratingDTextView"
                app:layout_constraintTop_toBottomOf="@+id/movieDNameTextView" />

            <TextView
                android:id="@+id/favCountDTextView"
                android:layout_width="75dp"
                android:layout_height="18dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="10dp"
                android:text="@string/favcount"
                app:layout_constraintStart_toEndOf="@+id/favCountDImageView"
                app:layout_constraintTop_toBottomOf="@+id/movieDNameTextView" />

            <ImageView
                android:id="@+id/commentCountDImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/favcount"
                android:src="@drawable/ic_outline_mode_comment_24"
                app:layout_constraintStart_toEndOf="@+id/favCountDTextView"
                app:layout_constraintTop_toBottomOf="@+id/movieDNameTextView" />

            <TextView
                android:id="@+id/commentCountDTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:text="@string/commentcount"
                app:layout_constraintStart_toEndOf="@+id/commentCountDImageView"
                app:layout_constraintTop_toBottomOf="@+id/movieDNameTextView" />

            <TextView
                android:id="@+id/synopsisTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="18dp"
                android:text="@string/synopsis"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dateDurCatTextView" />

            <TextView
                android:id="@+id/dateDurCatTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/date_duration_category"
                app:layout_constraintStart_toEndOf="@+id/ratingDTextView"
                app:layout_constraintTop_toBottomOf="@+id/favCountDImageView" />

            <TextView
                android:id="@+id/director"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="Director"
                android:textColor="#353434"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/synopsisTextView" />

            <TextView
                android:id="@+id/directorTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="34dp"
                android:layout_marginTop="12dp"
                android:text="@string/director"
                app:layout_constraintStart_toEndOf="@+id/director"
                app:layout_constraintTop_toBottomOf="@+id/synopsisTextView" />

            <TextView
                android:id="@+id/cast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="Cast"
                android:textColor="#353434"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/director" />

            <TextView
                android:id="@+id/castTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="56dp"
                android:layout_marginTop="12dp"
                android:text="@string/cast"
                app:layout_constraintStart_toEndOf="@+id/cast"
                app:layout_constraintTop_toBottomOf="@+id/directorTextView" />

            <TextView
                android:id="@+id/genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="Genre"
                android:textColor="#353434"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cast" />

            <TextView
                android:id="@+id/genreTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="12dp"
                android:text="@string/genre"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/genre"
                app:layout_constraintTop_toBottomOf="@+id/castTextView"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:text="Language"
                android:textColor="#353434"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/genre"
                app:layout_constraintVertical_bias="0.005" />

            <TextView
                android:id="@+id/languageTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:text="@string/language"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/language"
                app:layout_constraintTop_toBottomOf="@+id/genreTextView"
                app:layout_constraintVertical_bias="0.005" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>